--- a/操作系统课设指导2023/操作系统课程设计指导.md
+++ b/操作系统课设指导2023/操作系统课程设计指导.md
@@ -1,3 +1,5 @@
+> 指导书原始文件 👉 [操作系统课程设计指导 -京江2023.pdf](https://github.com/SlenderData/Operating-System-Curriculum-Design/blob/main/%E6%93%8D%E4%BD%9C%E7%B3%BB%E7%BB%9F%E8%AF%BE%E8%AE%BE%E6%8C%87%E5%AF%BC2023/%E6%93%8D%E4%BD%9C%E7%B3%BB%E7%BB%9F%E8%AF%BE%E7%A8%8B%E8%AE%BE%E8%AE%A1%E6%8C%87%E5%AF%BC%20-%E4%BA%AC%E6%B1%9F2023.pdf)
+
 # 操作系统课程设计
 
 ## 一、目的
@@ -16,7 +18,7 @@
 
 文件 Process.txt 中存储了进程的基本信息，数据格式解释如下：
 
-<center>表1 进程基本信息</center>
+表1 进程基本信息
 
 | 进程名 | 进程创建时间 | 优先级 | 备注   |
 | ------ | ------------ | ------ | ------ |
@@ -26,7 +28,7 @@
 
 文件 program.txt 记录了程序的基本信息
 
-<center>表2 程序A的基本信息</center>
+表2 程序A的基本信息
 
 | 文件名     | A 程序 |
 | ---------- | ------ |
@@ -39,7 +41,7 @@
 
 文件 run.txt 记录了程序执行的基本过程
 
-<center>表3 程序A执行过程</center>
+表3 程序A执行过程
 
 | 程序名       | A程序    |                           |
 | ------------ | -------- | ------------------------- |
